added user routes and checks
